trying to fix hover on mobile device

--- a/src/CreateTodoButton/CreateTodoButton.css
+++ b/src/CreateTodoButton/CreateTodoButton.css
@@ -14,7 +14,7 @@
     cursor: pointer;
 }
 
-@media (max-width: 425px) {
+@media (max-width: 540px) {
   .button-container {
       display: flex;
       justify-content: center;
